fix: slice MetaData 수정