@@ -99,7 +99,8 @@ public class BoardService {
 		Pageable pageable = request.pageable();
 		Slice<BoardResponse> slice = boardRepositoryCustom.getBoardSlice(request, pageable);
 		return new SliceResponse<>(slice.getContent(), pageable, slice.hasNext(),
-			slice.getContent().getLast().getBoardId().toString());
+			slice.getContent() != null ? slice.getContent().get(slice.getContent().size() - 1).getBoardId().toString() :
+				"");
 	}
 
 }
