@@ -73,7 +73,8 @@ public class InquiryService {
 		Pageable pageable = request.pageable();
 		Slice<QuestionResponse> slice = questionRepositoryCustom.getQuestionSlice(request, pageable);
 		return new SliceResponse<>(slice.getContent(), pageable, slice.hasNext(),
-			slice.getContent().getLast().getQuestionId().toString());
+			slice.getContent() != null ?
+				slice.getContent().get(slice.getContent().size() - 1).getQuestionId().toString() : "");
 	}
 
 	public Long createAnswer(Long questionId, AnswerCreateRequest answerCreateRequest) {
