@@ -55,7 +55,8 @@ public class GuardianPatientController {
 		@ParameterObject @ModelAttribute @Valid PatientSearchRequest patientSearchRequest, Pageable pageable) {
 		Slice<PatientResponse> slice = patientService.pageListPatientCursor(patientSearchRequest, pageable);
 		SliceResponse<PatientResponse> sliceResponse = new SliceResponse<>(slice.getContent(), pageable,
-			slice.hasNext(), slice.getContent().getLast().getId().toString());
+			slice.hasNext(),
+			slice.getContent() != null ? slice.getContent().get(slice.getContent().size() - 1).getId().toString() : "");
 		return ResponseEntity.ok(sliceResponse);
 	}
 
